feat: make style to login form

--- a/login.html
+++ b/login.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <form  align="center">
-        <div>
+    <form align="center">
+        <div class="body-form">
             <p>
-                <strong>User login</strong>
+                <strong>User Icon</strong>
             </p>
-            <input type="text" placeholder="login"> <br>
-            <input type="text" placeholder="password"> <br>
-            <button>Sign in</button>
-            <p>Forgot password</p> 
+            <input type="text" class="champ" placeholder="login"> <br>
+            <input type="text" class="champ" placeholder="password"> <br>
+            <button class="bouton">Sign in</button>
+        </div>
+        <div class="footer-form">
+            <p>Forgot password ?</p>
         </div>
     </form>
 </body>
