feat(todo) and fix(login)

--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
             <p>
                 <strong>User Icon</strong>
             </p>
-            <input type="text" class="champ" placeholder="login"> <br>
-            <input type="text" class="champ" placeholder="password"> <br>
+            <input type="text" class="champ" placeholder="Login"> <br>
+            <input type="text" class="champ" placeholder="Password"> <br>
             <button class="bouton">Sign in</button>
         </div>
         <div class="footer-form">
