--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <form align="center">
+    <form align="center" id="loginForm">
         <div class="body-form">
             <p>
                 <strong>User Icon</strong>
