feat: authentification & route guard

--- a/bootstrap_template/pages/panier.html
+++ b/bootstrap_template/pages/panier.html
@@ -84,5 +84,7 @@
     <script src="./../assets/jquery/jquery.js"></script>
     <script src="./../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./../assets/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./../assets/scripts/services.js"></script>
+    <script src="./../assets/scripts/app.js"></script>
   </body>
 </html>
