--- a/bootstrap_template/pages/login.html
+++ b/bootstrap_template/pages/login.html
@@ -75,7 +75,7 @@
                   />
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn btn-primary">
+                  <button type="submit" class="btn btn-primary" onclick="onAuthenticate(event)">
                     Se connecter
                   </button>
                 </div>
@@ -91,5 +91,7 @@
     <script src="./../assets/jquery/jquery.js"></script>
     <script src="./../assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./../assets/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./../assets/scripts/services.js"></script>
+    <script src="./../assets/scripts/auth.js"></script>
   </body>
 </html>
