feat: CR done, wip: UD

--- a/bootstrap_template/pages/listeProduit.html
+++ b/bootstrap_template/pages/listeProduit.html
@@ -38,13 +38,13 @@
               <form>
                 <div class="form-row">
                   <div class="col-5">
-                    <input type="text" class="form-control" placeholder="Nom du produit">
+                    <input type="text" class="form-control" placeholder="Nom du produit" id="name-add">
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="Prix du produit">
+                    <input type="text" class="form-control" placeholder="Prix du produit" id="price-add">
                   </div>
                   <div class="col">
-                    <a type="button" class="btn btn-primary " href=""> <i class="fas fa-plus mr-3"></i>Ajouter</a> 
+                    <a type="button" class="btn btn-primary " href="" id="add-button"> <i class="fas fa-plus mr-3"></i>Ajouter</a> 
                   </div>
                 </div>
               </form>
@@ -75,31 +75,8 @@
                       <th scope="col"> Opération</th>
                   </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Min-Sao</td>
-                    <td>2000</td>
-                    <td>
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-plus"></i></a> 
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-edit"></i></a> 
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-trash"></i></a> 
-                    </td>
-                  </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Soupe</td>
-                    <td>3000</td>
-                    <td>
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-plus"></i></a> 
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-edit"></i></a> 
-                      <a type="button" class="btn btn-outline-primary mr-3" href=""> <i class="fas fa-trash"></i></a> 
-                    </td>
-                  </tr>
-                  <tr>
-                  
-          
-                </tr></tbody>
+                <tbody id="productList">
+                </tbody>
               </table>
             </div>
           </div>
